crates/djls-semantic/tests/snapshots/corpus__repos__simonwillison.net__blog__templatetags__tag_cloud.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "blog.templatetags.tag_cloud::tag::tag_cloud":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "blog.templatetags.tag_cloud::tag::tag_cloud_for_tags":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: tags
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs: {}
